created github pages homepage, changed readme

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pams-virtual-vanity",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pamtheham.github.io/pams-virtual-vanity",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -21,6 +22,8 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
